# BLUE_DB

./: .gitignore  LICENSE  README.md  blue_db_meta.json  build_codebook.py  build_distribution.py  data_files_reference.csv  eval_ned.py  foreign_resolver.py  make_summary_tables.py  parties_final.csv  pyproject.toml  requirements.txt
blue_db/: __init__.py  blue_db.py  blue_maps.py
codebook/templates/: geo_typology.tex  intro.tex  overview.tex  parties_typology.tex  special_units.tex  special_units_abroad.tex  special_units_constituencies.tex  special_units_oct.tex  special_units_yy.tex  variables_elections.tex  variables_geo.tex  variables_parties.tex
examples/: 01_ideology_by_country.py  02_map_radical_right.py  03_ep_group_shares.py
maps/: EL.dbf  EL.shp  EL.shx  EU_IE_1999.shx  EU_IE_2004.dbf  EU_IE_2004.shx  EU_IE_2009.shx  EU_IE_2014.shx  EU_IE_2019.dbf  EU_IE_2019.shx  IE_1997.dbf  IE_1997.shx  IE_2023.dbf  IE_2023.shx  IS.dbf  IS.shx  MT.dbf  MT.shp  MT.shx  SI.dbf  SI.shx
output/AT/: 2002.csv  2002_special.csv  2006.csv  2006_special.csv  2008.csv  2008_special.csv  2013.csv  2013_special.csv  2017.csv  2017_special.csv  2019.csv  2019_special.csv  2024.csv  2024_special.csv
output/BE/: 2003.csv  2003_special.csv  2007.csv  2007_special.csv  2010.csv  2010_special.csv  2014.csv  2014_special.csv  2019.csv  2019_special.csv  2024.csv  2024_special.csv
output/BG/: 2005.csv  2005_special.csv  2009.csv  2009_special.csv  2013.csv  2013_special.csv  (+18 more)
resources/: ep_groups.csv  eu_parties.csv  nuts_0.csv  nuts_1.csv  nuts_2.csv  nuts_3.csv  special_raw.csv
(+587 files in other folders)
